syntax = "proto3";
package decimal.nft.v1;

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";

option go_package = "bitbucket.org/decimalteam/go-smart-node/x/nft/types";

message SubToken {
  option (gogoproto.equal)           = false;
  option (gogoproto.goproto_getters) = false;

  uint64 id = 1 [
    (gogoproto.jsontag) = "id",
    (gogoproto.moretags) = "yaml:\"id\"",
    (gogoproto.customname) = "ID"
  ];

  cosmos.base.v1beta1.Coin reserve = 2 [
    (gogoproto.moretags) = "yaml:\"reserve\"",
    (gogoproto.nullable) = false
  ];
}